<resources>
    <string name="app_name">ToDo Task Reminder</string>
    <string name="check_tasks">Check Tasks</string>
    <string name="create_new_task">Create New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_tasks">Delete Tasks</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="name_2dots">Name:</string>
    <string name="description_2dots">Description:</string>
    <string name="location_2dots">Location:</string>
    <string name="title_activity_maps">Maps</string>
    <string name="distance_remind">Remind when less than %1$.2f km far</string>
    <string name="date_remind_2dots">Remind in the following date:</string>
    <string name="remind_by_location">Remind By Location</string>
    <string name="remind_by_date">Remind By Date</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="enter_name">Enter name here</string>
    <string name="enter_description">Enter description here</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="distance_remind_when_2dots">Remind me when the distance is equal or smaller than:</string>
    <string name="mark_as_complete">Mark as complete</string>
    <string name="km">km</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="check_location">Check location</string>
    <string name="delete_location">Delete location</string>
    <string name="create_new_location">Create New Location</string>
    <string name="minutes">Minutes</string>
    <string name="check_location_timer_2dots">Check Location Every:</string>
    <string name="address_2dots">Address:</string>
    <string name="group_2dots">Group:</string>
    <string name="see_on_maps">See On Maps</string>
    <string name="belongs_to_group">Belongs to a Group</string>
    <string name="belongs_existing_group">Belongs To An Existing Group</string>
    <string name="belongs_new_group">Belongs to a new Group</string>
    <string name="address_loaded_from_maps">Address loaded from Maps</string>
    <string name="input_group">Input group here</string>
    <string name="pick_location_on_maps">Pick location on Maps</string>
    <string name="edit_location">Edit location</string>
    <string name="save_and_return">Save and return</string>
    <string name="name_missing">Name is missing</string>
    <string name="address_missing">Address is missing</string>
    <string name="coordinates_missing">Coordinates are missing</string>
    <string name="group_missing">Group is missing</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="no_location_selected">No location selected</string>
    <string name="belongs_to_no_group">Does not belong to any group</string>
    <string name="name_already_exists">Name already exists</string>
    <string name="error">Error</string>
    <string name="choose_locations">Choose locations</string>
    <string name="description_missing">Description missing</string>
    <string name="date_missing">Date / Time missing</string>
    <string name="invalid_distance">Invalid distance</string>
    <string name="without_group">Without group</string>
    <string name="task_already_exists">Already exists a task with that name</string>
    <string name="no_task_selected">No task selected</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_want_delete">Are you sure you want to delete?</string>
    <string name="task_status_2dots">Task status:</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="it_is_time_of_task">It\'s time to %1$s</string>
    <string name="date_time_passed">That date / time already passed</string>
    <string name="date_reminder">Date reminder</string>
    <string name="location_reminder">Location reminder</string>
    <string name="we_are_close_to_location">We are at less than %1$.1f Km of the location %2$s for the task %3$s. Let\'s go there?</string>
    <string name="impossible_get_current_location">Impossible to get your current location. Error %1$d</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="missing_google_maps_permissions">You did not give all necessary permissions to use Google Maps</string>
    <string name="alarm_permission_missing">Alarm permission missing</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="added_geolocation">Added geolocation %1$s</string>
    <string name="impossible_to_add_geolocation">Impossible to add geolocation %1$s</string>
    <string name="removed_geolocation">Removed geolocation %1$s</string>
    <string name="impossible_to_remove_geolocation">Impossible to remove geolocation %1$s</string>
    <string name="user_password_2dots">User password:</string>
    <string name="admin_password_2dots">Administrator password:</string>
    <string name="enter_data">Enter data</string>
    <string name="upload_to_cloud">Upload task to cloud</string>
    <string name="missing_password">You must fill both passwords to share task</string>
    <string name="shared_tasks">Shared tasks</string>
    <string name="online_task_id_2dots">Online task Id:</string>
    <string name="password_2dots">Password:</string>
    <string name="store">Store</string>
    <string name="invalid_online_task_id">Invalid online task Id</string>
    <string name="invalid_password">Invalid password</string>
    <string name="missing_internet_permission">Without internet permission, you can\'t use this feature</string>
    <string name="missing_background_location_permission">Without background location permission, you can\'t use locations reminder service</string>
    <string name="impossible_to_store_location">Impossible to store. Already exists a location with that name</string>
    <string name="shared_task_successfully_stored">Shared task successfully stored</string>
    <string name="shared_task_successfully_sent_to_cloud">Shared task successfully sent to cloud with online Id %1$s</string>
    <string name="shared_task_successfully_deleted_from_cloud">Shared task successfully deleted from cloud</string>
    <string name="impossible_to_delete_location">Impossible to delete location, it\'s being used by a task</string>
    <string name="location_successfully_deleted">Location successfully deleted</string>
    <string name="no_online_task_id">You did not enter online task Id</string>
    <string name="no_password">You did not enter the password</string>
    <string name="name_loaded_from_maps">Name loaded from maps</string>
    <string name="impossible_to_store_task">Impossible to store. Already exists a task with that name</string>
    <string name="need_internet_connection">You need internet connection to access this feature</string>
    <string name="missing_schedule_exact_alarm_permission">Without schedule exact alarm permission, you can\'t use date reminder service</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="color_value_range">Value should be within 0 and 255</string>
    <string name="select_color">Select color</string>
    <string name="change_buttons_color">Change buttons color</string>
    <string name="change_background_color">Change background color</string>
    <string name="online_task_already_stored">Online task already stored</string>
    <string name="there_are_no_tasks">There are no tasks</string>
    <string name="there_are_no_locations">There are no locations</string>
    <string name="color_palette">Color palette</string>
    <string name="color_code_max_value" translatable="false">255</string>
    <string name="distance_suggestion" translatable="false">1.2</string>
    <string name="change_colors">Change colors</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_online_task_id">Enter online task Id</string>
</resources>