<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskId_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/taskId_password_layout_taskId_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:lines="1"
        android:text="@string/online_task_id_2dots" />

    <EditText
        android:id="@+id/taskId_password_layout_taskId_EditText"
        android:inputType="number"
        android:hint="@string/enter_online_task_id"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/taskId_password_layout_password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:lines="1"
        android:text="@string/password_2dots" />

    <EditText
        android:id="@+id/taskId_password_layout_password_EditText"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>