<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/password_layout_user_password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:lines="1"
        android:text="@string/user_password_2dots" />

    <EditText
        android:id="@+id/password_layout_user_password_EditText"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_layout_admin_password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:lines="1"
        android:text="@string/admin_password_2dots" />

    <EditText
        android:id="@+id/password_layout_admin_password_EditText"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>